[package]
name = "auth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argon2 = "0.4.1"
rand_core = { version = "0.6", features = ["std"] }
lettre = "0.10"
log = "0.4"
env_logger = "0.10"
jsonwebtoken = "8"
time = "0.3"
zxcvbn = "2.2"

lazy_static = "1.4"

axum = { version = "0.6" }
axum-extra = { version = "0.4", features = ["cookie"] }
axum-sessions = "0.4"
handlebars = { version = "4.3", features = ["dir_source"] }
tokio = { version = "1.21", features = ["rt", "macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

diesel = { version = "2.0", features = ["postgres", "r2d2"] }
diesel_migrations = "2.0"

oauth2 = { version = "4.2", features = ["reqwest"], default_features = false }
reqwest = { version = "0.11", features = ["json"] }

once_cell = "1.16"
strum = "0.24"
strum_macros = "0.24"
dotenv = "0.15"
